force-app/main/default/objects/Availability__c/Availability__c.object-meta.xml
<CustomObject>
    <description>Defines when a host is bookable - recurring weekly hours or date overrides</description>
    <label>Availability</label>
    <nameField>
        <displayFormat>AV-{0000}</displayFormat>
        <label>Availability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>