force-app/main/default/objects/Availability__c/fields/Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Date__c</fullName>
    <description>Specific date for date override availability type</description>
    <label>Override Date</label>
    <type>Date</type>
</CustomField>