force-app/main/default/objects/Availability__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Working_Hours for recurring availability, Date_Override for specific date exceptions</description>
    <label>Availability Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working_Hours</fullName>
                <default>true</default>
                <label>Working Hours</label>
            </value>
            <value>
                <fullName>Date_Override</fullName>
                <label>Date Override</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>