force-app/main/default/objects/Availability__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>Parent schedule for this availability record</description>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>