force-app/main/default/objects/Availability__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start time for availability window</description>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>